--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,11 +9,13 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repository and submodules
+        uses: actions/checkout@v2
+        with:
+          submodules: recursive
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-        with:
-          submodules: recursive
       -
         name: Login to Docker Hub
         uses: docker/login-action@v2
