--- a/src/env/development.env
+++ b/src/env/development.env
@@ -4,10 +4,10 @@ NODE_ENV=development
 # Server ##
 PORT=3000
 HOST=localhost
-MONGO_HOST="link-db"
+MONGO_HOST="link-db-tree"
 
 # MONGO DB ##
-DB_HOST="link-db"
+DB_HOST="link-db-tree"
 DB_PORT=27017
 DB_USR="db-usr-test"
 DB_PWD="db-usr-test"
