[ADD] example of utilisation of conf file

--- a/src/ranking/commands.conf
+++ b/src/ranking/commands.conf
@@ -1,5 +1,9 @@
 NB_COMMANDS 3
+#
+#MALAISE 1
+#CARDIAC_ARREST 2
+#SYMPTOME 0
 
-MALAISE 1
-CARDIAC_ARREST 2
-SYMPTOME 0
+MALAISE 1 OUI: CARDIAC_ARREST NON: NONE
+CARDIAC_ARREST 2 OUI: NONE NON: NONE
+SYMPTOME 0 OUI: MALAISE NON: NONE
