--- a/src/ranking/commands.conf
+++ b/src/ranking/commands.conf
@@ -4,6 +4,6 @@ NB_COMMANDS 3
 #CARDIAC_ARREST 2
 #SYMPTOME 0
 
-MALAISE 1 OUI: CARDIAC_ARREST NON: NONE
-CARDIAC_ARREST 2 OUI: NONE NON: NONE
-SYMPTOME 0 OUI: MALAISE NON: NONE
+MALAISE 0 YES: CARDIAC_ARREST NO: NONE
+CARDIAC_ARREST 1 YES: NONE NO: SYMPTOME
+SYMPTOME 2 YES: NONE NO: NONE
