[MOD] format of conf file

--- a/src/ranking/commands.conf
+++ b/src/ranking/commands.conf
@@ -1,9 +1,4 @@
 NB_COMMANDS 3
-#
-#MALAISE 1
-#CARDIAC_ARREST 2
-#SYMPTOME 0
-
-MALAISE 0 YES: CARDIAC_ARREST NO: NONE
-CARDIAC_ARREST 1 YES: NONE NO: SYMPTOME
-SYMPTOME 2 YES: NONE NO: NONE
+MALAISE 0 YES: CARDIAC_ARREST NO: NOTHING
+CARDIAC_ARREST 1 YES: NOTHING NO: SYMPTOME
+SYMPTOME 2 YES: NOTHING NO: NOTHING
