--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,3 +26,28 @@ jobs:
           push: true
           tags: urgencetree/server-decision-tree:latest
           file: "./Dockerfile.prod"
+
+  build:
+    name: Build
+    runs-on: ubuntu-latest
+    steps:
+
+    - name: Check out code into the Go module directory
+      uses: actions/checkout@v2
+
+    - name: Set up Go 1.x
+      uses: actions/setup-go@v2
+      with:
+        go-version: ^1.17
+
+    - name: Get dependencies
+      run: go mod download
+
+    - name: Build
+      working-directory: ./src
+      run: go build -v ./...
+
+    - name: Test
+      working-directory: ./src
+      run: go test -v ./...
+
