--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
         go-version: ^1.17
 
     - name: Get dependencies
-      run: go mod download
+      run: go mod download -x
 
     - name: Build
       working-directory: ./src
