--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,28 +1,28 @@
-name: ci
+name: Docker Build
 
 on:
   push:
     branches:
-      - 'not-exist'
+      - origin/USDT-34-Github-action-dockerfile
 
 jobs:
-  docker:
+  build:
+    name: Build Docker Image
     runs-on: ubuntu-latest
-    steps:
 
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      -
-        name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push
-        uses: docker/build-push-action@v3
-        with:
-          push: true
-          tags: urgencetree/server-decision-tree:latest
-          file: "./Dockerfile.prod"
+    steps:
+    - name: Checkout Repository
+      uses: actions/checkout@v2
+
+    - name: Build Docker Image
+      run: docker build -t sdt_questions_img .
+
+    # You can add additional steps here, such as running tests on the image.
+
+    - name: Save Docker Image as Artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: docker-image
+        path: |
+          /var/lib/docker
+          /var/run/docker.sock
