--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,3 +16,22 @@ jobs:
 
     - name: Build Docker Image
       run: docker build -t sdt_questions_img .
+
+name: Docker compose
+
+on:
+  push:
+    branches:
+      - USDT-34-Github-action-dockerfile
+
+jobs:
+  build:
+    name: Build Docker Compose
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout Repository
+      uses: actions/checkout@v2
+
+    - name: Build Docker Compose
+      run: docker-compose up --build
