--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
       - USDT-34-Github-action-dockerfile
 
 jobs:
-  build:
+  build-img:
     name: Build Docker Image
     runs-on: ubuntu-latest
 
@@ -17,15 +17,7 @@ jobs:
     - name: Build Docker Image
       run: docker build -t sdt_questions_img .
 
-name: Docker compose
-
-on:
-  push:
-    branches:
-      - USDT-34-Github-action-dockerfile
-
-jobs:
-  build:
+  build-compose:
     name: Build Docker Compose
     runs-on: ubuntu-latest
 
