--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -1,4 +1,4 @@
-name: Check Project
+name: Check unit test
 
 on:
   push:
@@ -7,14 +7,16 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    container:
-      image: epitechcontent/epitest-docker:latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Unit test Timer
-      run: cd unit_test/time_test/;./time_test.sh 
-    
-    - uses: actions/checkout@v3
-    - name: Unit test Parser
-      run: cd unit_test/ut_parser/;go test -v -timeout 10s; go test -cover -timeout 10s;go test -count 1000 -timeout 10s;
+      - name: Install Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.11
+          stable: true
+      - name: Unit test Timer
+        run: cd unit_test/time_test/;./time_test.sh 
+          
+      - uses: actions/checkout@v3
+      - name: Unit test Parser
+        run: cd unit_test/ut_parser/;go test -v -timeout 10s; go test -cover -timeout 10s;go test -count 1000 -timeout 10s;
