--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -9,6 +9,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Unit test Timer
+        run: cd unit_test/time_test/
+        #run: cd unit_test/time_test/ && ./time_test.sh 
 # ------------- INSTALLATION -------------------------------------------------------------
 
       - name: Install Go
@@ -19,9 +22,6 @@ jobs:
       
 # ------------- UNIT TEST -----------------------------------------------------------------      
       
-      - name: Unit test Timer
-        run: ls
-      #run: cd unit_test/time_test/ && ./time_test.sh 
           
       - uses: actions/checkout@v3
       - name: Unit test Parser
