--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -10,8 +10,8 @@ jobs:
 
     steps:
       - name: Unit test Timer
-        run: cd unit_test/time_test/
-        #run: cd unit_test/time_test/ && ./time_test.sh 
+        working-directory: ./unittest/time_test/
+        run: ./time_test.sh
 # ------------- INSTALLATION -------------------------------------------------------------
 
       - name: Install Go
@@ -25,4 +25,5 @@ jobs:
           
       - uses: actions/checkout@v3
       - name: Unit test Parser
-        run: cd unit_test/ut_parser/;go test -v -timeout 10s; go test -cover -timeout 10s;go test -count 1000 -timeout 10s;
+        working-directory: ./unit_test/ut_parser/
+        run: go test -v -timeout 10s; go test -cover -timeout 10s;go test -count 1000 -timeout 10s;
