--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -21,9 +21,9 @@ jobs:
           
       - name: Unit test Timer
         working-directory: ./unit_test/time_test/
-        run: ls
+        run: ./time_test.sh
           
-      #- uses: actions/checkout@v3
-      #- name: Unit test Parser
-      #  working-directory: ./unit_test/ut_parser/
-      #  run: go test -v -timeout 10s; go test -cover -timeout 10s;go test -count 1000 -timeout 10s;
+      - uses: actions/checkout@v3
+      - name: Unit test Parser
+        working-directory: ./unit_test/ut_parser/
+        run: go test -v -timeout 10s; go test -cover -timeout 10s;go test -count 1000 -timeout 10s;
