--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -20,10 +20,10 @@ jobs:
 # ------------- UNIT TEST -----------------------------------------------------------------      
           
       - name: Unit test Timer
-        working-directory: ./unit_test/time_test/
+        working-directory: unit_test/time_test/
         run: ./time_test.sh
           
       - uses: actions/checkout@v3
       - name: Unit test Parser
-        working-directory: ./unit_test/ut_parser/
+        working-directory: unit_test/ut_parser/
         run: go test -v -timeout 10s; go test -cover -timeout 10s;go test -count 1000 -timeout 10s;
