--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -19,9 +19,9 @@ jobs:
           
 # ------------- UNIT TEST -----------------------------------------------------------------      
           
-      - name: Unit test Timer
-        working-directory: unit_test/time_test/
-        run: ./time_test.sh
+      #- name: Unit test Timer
+      #  working-directory: unit_test/time_test/
+      #  run: ./time_test.sh
           
       - uses: actions/checkout@v3
       - name: Unit test Parser
