[MOD] add new branch for the github action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - USDT-34-Github-action-dockerfile
+      - USDT-16-Test-unitaire-Algorithme
       - dev
 
 jobs:
