--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,7 @@ on:
       - USDT-34-Github-action-dockerfile
       - USDT-16-Test-unitaire-Algorithme
       - dev
+      - main
 
 jobs:
   build-img:
